About page: prevent clipping of grid outlines. Remove extra border around memory diagram.

--- a/source/styles/GridView.scss
+++ b/source/styles/GridView.scss
@@ -2,10 +2,8 @@
 @use 'sass:math';
 @use 'root.scss';
 
-.gridBackground {
-    display: inline;
-    background: var(--panel-background);
-    padding: 1rem;
+.svgBackground {
+    fill: var(--panel-background);
 }
 
 .cellPath {
